0.5.2/io.gladed.watchable/index.md
[io.gladed.watchable](./index.md)

## Package io.gladed.watchable

### Types

| Name | Summary |
|---|---|
| [Bindable](-bindable/index.md) | `interface Bindable<T, C : `[`Change`](-change.md)`<`[`T`](-bindable/index.md#T)`>> : CoroutineScope`<br>An object whose contents are updated automatically when another object changes. |
| [Change](-change.md) | `interface Change<T>`<br>Describes a change to an object of type [T](-change.md#T). |
| [ListChange](-list-change/index.md) | `sealed class ListChange<T> : `[`Change`](-change.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-list-change/index.md#T)`>>`<br>Describes a change to a [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html). |
| [MapChange](-map-change/index.md) | `sealed class MapChange<K, V> : `[`Change`](-change.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-map-change/index.md#K)`, `[`V`](-map-change/index.md#V)`>>`<br>Describes a change to a [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html). |
| [ReadOnlyWatchableList](-read-only-watchable-list/index.md) | `interface ReadOnlyWatchableList<T> : `[`Watchable`](-watchable/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-read-only-watchable-list/index.md#T)`>, `[`ListChange`](-list-change/index.md)`<`[`T`](-read-only-watchable-list/index.md#T)`>>`<br>A list which cannot be modified externally, but may be watched for changes. |
| [ReadOnlyWatchableMap](-read-only-watchable-map.md) | `interface ReadOnlyWatchableMap<K, V> : `[`Watchable`](-watchable/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>, `[`MapChange`](-map-change/index.md)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>>, `[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-read-only-watchable-map.md#K)`, `[`V`](-read-only-watchable-map.md#V)`>`<br>A map which cannot be modified externally, but may be watched for changes. |
| [ReadOnlyWatchableSet](-read-only-watchable-set.md) | `interface ReadOnlyWatchableSet<T> : `[`Watchable`](-watchable/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-read-only-watchable-set.md#T)`>, `[`SetChange`](-set-change/index.md)`<`[`T`](-read-only-watchable-set.md#T)`>>, `[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-read-only-watchable-set.md#T)`>`<br>An set which cannot be modified externally, but may be watched for changes. |
| [ReadOnlyWatchableValue](-read-only-watchable-value/index.md) | `interface ReadOnlyWatchableValue<T> : `[`Watchable`](-watchable/index.md)`<`[`T`](-read-only-watchable-value/index.md#T)`, `[`ValueChange`](-value-change/index.md)`<`[`T`](-read-only-watchable-value/index.md#T)`>>`<br>A value which may not be modified externally but may still be watched for changes. |
| [SetChange](-set-change/index.md) | `sealed class SetChange<T> : `[`Change`](-change.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-set-change/index.md#T)`>>`<br>Describes a change to a [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html). |
| [ValueChange](-value-change/index.md) | `data class ValueChange<T> : `[`Change`](-change.md)`<`[`T`](-value-change/index.md#T)`>`<br>Describes a change to a value. |
| [Watchable](-watchable/index.md) | `interface Watchable<T, C : `[`Change`](-change.md)`<`[`T`](-watchable/index.md#T)`>> : CoroutineScope`<br>An object wrapping type [T](-watchable/index.md#T) which can be watched for changes of type [C](-watchable/index.md#C). |
| [WatchableList](-watchable-list/index.md) | `class WatchableList<T> : `[`ReadOnlyWatchableList`](-read-only-watchable-list/index.md)`<`[`T`](-watchable-list/index.md#T)`>, `[`Bindable`](-bindable/index.md)`<`[`List`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html)`<`[`T`](-watchable-list/index.md#T)`>, `[`ListChange`](-list-change/index.md)`<`[`T`](-watchable-list/index.md#T)`>>`<br>A [List](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-list/index.html) whose contents may be watched for changes. |
| [WatchableMap](-watchable-map/index.md) | `class WatchableMap<K, V> : `[`AbstractMap`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-abstract-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`ReadOnlyWatchableMap`](-read-only-watchable-map.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`Bindable`](-bindable/index.md)`<`[`Map`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>, `[`MapChange`](-map-change/index.md)`<`[`K`](-watchable-map/index.md#K)`, `[`V`](-watchable-map/index.md#V)`>>`<br>A [Map](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-map/index.html) whose contents may be watched for changes. |
| [WatchableSet](-watchable-set/index.md) | `class WatchableSet<T> : `[`AbstractSet`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-abstract-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`ReadOnlyWatchableSet`](-read-only-watchable-set.md)`<`[`T`](-watchable-set/index.md#T)`>, `[`Bindable`](-bindable/index.md)`<`[`Set`](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html)`<`[`T`](-watchable-set/index.md#T)`>, `[`SetChange`](-set-change/index.md)`<`[`T`](-watchable-set/index.md#T)`>>`<br>A [Set](https://kotlinlang.org/api/latest/jvm/stdlib/kotlin.collections/-set/index.html) whose contents may be watched for changes. |
| [WatchableValue](-watchable-value/index.md) | `class WatchableValue<T> : `[`ReadOnlyWatchableValue`](-read-only-watchable-value/index.md)`<`[`T`](-watchable-value/index.md#T)`>, `[`Bindable`](-bindable/index.md)`<`[`T`](-watchable-value/index.md#T)`, `[`ValueChange`](-value-change/index.md)`<`[`T`](-watchable-value/index.md#T)`>>, CoroutineScope`<br>A wrapper for a value which may be watched for changes. |

### Extensions for External Classes

| Name | Summary |
|---|---|
| [kotlin.collections.Collection](kotlin.collections.-collection/index.md) |  |
| [kotlin.collections.Map](kotlin.collections.-map/index.md) |  |
| [kotlinx.coroutines.CoroutineScope](kotlinx.coroutines.-coroutine-scope/index.md) |  |
